# CPURenderer

./: CMakeLists.txt  Model.cpp  Model.h  README.md  geometry.cpp  geometry.h  main.cpp
